--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="images-profile-container">
-    <img src="/assets/image_profile.jpg" alt="" height="410" width="100%">
+    <div class="wall-picture-container">
+      <img src="/assets/image_profile.jpg" alt="" height="410" width="1075">
+    </div>
     <div class="profile-pic-container">
       <p>
         <img src=<%= @user.picture_url %> alt="" height="220" width="210" data-toggle="modal" data-target="#myModal">
@@ -22,42 +24,33 @@
             <p>Number of books: <%= @user_books.count %></p>
           </li>  
         </ul>
+        <!-- Modal -->
+        <div id="myModal" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-body">
+                <div class="col-lg-12">
+                  <div class="col-lg-7 picture-profile-modal">
+                    <img src=<%= @user.picture_url %> alt="" height="535" width="490">
+                  </div>
+                  <div class="col-lg-4 modal-display-info"  style="background: white;">
+                    <h3><%= @user.first_name %> <%= @user.last_name %> </h3>
+                    <p>About:<%= @user.about%></p>
+                    <p>Number of books: <%= @user_books.count %></p>
 
-
-
-
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-body">
-        <div class="col-lg-12">
-          <div class="col-lg-7 picture-profile-modal">
-            <img src=<%= @user.picture_url %> alt="" height="535" width="490">
-          </div>
-          <div class="col-lg-4 modal-display-info"  style="background: white;">
-            <h3><%= @user.first_name %> <%= @user.last_name %> </h3>
-            <p>About:<%= @user.about%></p>
-            <p>Number of books: <%= @user_books.count %></p>
-
-            <div class="user-books-images small-containers">
-              <h4>Books</h4>
-              <% @user_books.each do |book| %>
-                  <a href="/books/<%= book.id %>"><img src=<%=  book.picture_url %> alt="" height="110" width="103"></a>
-              <% end %>
+                    <div class="user-books-images small-containers">
+                      <h4>Books</h4>
+                      <% @user_books.each do |book| %>
+                          <a href="/books/<%= book.id %>"><img src=<%=  book.picture_url %> alt="" height="110" width="103"></a>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-
       </div>
       
       <div class="user-info-and-updates small-containers">
@@ -139,9 +132,7 @@
         <br>
         <% end %>
       </div>
-
     </div>
-
   </div>
 </div>
 
