--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,27 +1,28 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
-  <div class="col-lg-12">
     
       <h4><img src=<%= @users.find(@book.user_id).picture_url %> alt="" height="50" width="45">This Book belongs to <a href="/users/<%= @users.find(@book.user_id).id %>" style="color: #3b5998;"><b><%= @users.find(@book.user_id).first_name %> <%= @users.find(@book.user_id).last_name %></b></a></h4>
-
-    <div class="col-lg-4 small-containers">
+    
+  <div class="col-lg-12 small-containers">
+    <div class="col-lg-3 small-containers">
       <h1>Title: <%= @book.title %></h1>
       <h3>Author: <%= @book.author %></h3>
+      <h4>Status: Available</h4>
       <h4>Isbn: <%= @book.isbn %></h4> 
       <div class="small-containers">
          <p>        
-          <img src=<%= @book.picture_url %> alt="" height="499" width="329">
+          <img src=<%= @book.picture_url %> alt="" height="299" width="232">
         </p>
       </div>
     </div>
-    <div class="col-lg-8 small-containers">
+    <div class="col-lg-5 small-containers">
 
       <p><strong>Description:</strong>
         <%= @book.description %></p>
       <div class="small-containers">
         <h3>Book Location:</h3>
-        <iframe id = "map" style="height: 300px; width: 500px" src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyCVt89sOKkehU7JDQpPncShX80rzGE6kj4&origin=<%= current_user.address %>&destination= <%= @book.user.address %> &avoid=tolls|highways"></iframe>
+        <iframe id = "map" style="height: 300px; width: 420px" src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyCVt89sOKkehU7JDQpPncShX80rzGE6kj4&origin=<%= current_user.address %>&destination= <%= @book.user.address %> &avoid=tolls|highways"></iframe>
       </div>
       
 
@@ -30,9 +31,12 @@
         <%= link_to 'Edit', edit_book_path(@book) %> |
         <%= link_to 'Back', books_path %>
       <% end %>
-      
+    </div>
+
+    <div class="col-lg-4 small-containers">
     
       <div class="reviews-container small-containers">
+
         <h3>Interested? Make a Request!</h3>
         <%= render './requests/form' %>
         <br>
