post a book dinamicly using isbn finished

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -15,6 +15,7 @@
  <%= f.input :author, label: "Book author" %>
  <%= f.input :isbn, isbn: "Isbn" %>
  <%= f.input :description, label: "Book description" %>
+ <%= f.input :picture_url, picture_url: "Isbn" %>
  <%=  f.button :submit %>
 <% end %>
 
