small changes to book's form

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -10,7 +10,7 @@
             <!-- <label for="formGroupExampleInput">Example label</label> -->
             <input type="text" class="form-control" id="isbn-entered" placeholder="Enter isbn number here!">
           </fieldset>
-          <button type="submit" class="btn btn-primary find-isbn-button">Find Book</button>
+          <button type="submit" class="btn btn-success find-isbn-button">Find Book</button>
         </form>
       </div>
       <br>
