--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -106,7 +106,7 @@
           <div class="small-containers">
 
             <div class="media-left media-top">
-              <a href="#">
+              <a href="/books/<%= book.id %>">
               <img src=<%= book.picture_url%> alt="" height="40" width="40">
               </a>
             </div>
