navbar simple filter by name completed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,6 +57,10 @@ body a:hover {
   padding-bottom: 10px;
 }
 
+#filter-button {
+  background: #E8E9EB;
+}
+
 .dropdown span {
   background: #23355B;
 }
