--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,6 +21,11 @@
     <div class="col-lg-7">
 
       <div class="media">
+        
+        <% @books.each do |book| %>
+        
+        <% end %>
+
         <% @books.each do |book| %>
           
           <div class="small-containers">
