small navbar filter form style fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <!-- This form will filter using controller passing params[:search] -->
         <form action="/books" accept-charset="UTF-8" method="get" class="navbar-form navbar-left" role="search">
-          <div class="form-group">
+          <div class="form-group" id="navbar-form-filter">
             <input name="utf8" type="hidden" value="✓">
             <input type="text" name="search" id="search" class="form-control input-sm" placeholder="Search Books">
             <button type="submit" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-search"></span></button>
