--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,8 +57,21 @@ body a:hover {
   padding-bottom: 10px;
 }
 
-#filter-button {
-  background: #E8E9EB;
+.btn-sm, .btn-group-sm > .btn {
+    padding: 5px 20px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+    background: #E8E9EB;
+    margin-left: -7px;
+}
+
+#navbar-form-filter {
+  margin-left: -6px;
+}
+
+.small-logo-navbar img {
+  border-radius: 3px;
 }
 
 .dropdown span {
