--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,2 +1,3 @@
-<h4><%= review.user_name %></h4>
-<p><%= review.comment %></p>
+<div class="small-containers" id="reviews-container">
+  <p><b><%= review.user_name %></b> <%= review.comment %></p>
+</div>
