--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,15 +3,28 @@
   <div class="col-lg-12">
 
     <div class="col-lg-2">
+
+    <% if Imageprofile.where(user_id: current_user.id )[0] != nil && Imageprofile.where(user_id: current_user.id )[0].profile_image != nil %>
+      <div class="small-profile-image-paperclip-home-page">
+        <p><%= image_tag @current_user_imageprofile.profile_image %> <a href="/users/<%= current_user.id %>"><%= current_user.first_name %> <%= current_user.last_name%></a></p>
+      </div>
+    <% else %>
       <p><img src=<%= current_user.picture_url %> alt="" height="20" width="20"> <a href="/users/<%= current_user.id %>"><%= current_user.first_name %> <%= current_user.last_name%></a></p>
+    <% end %>
       <p><span class="glyphicon glyphicon-pencil"></span> <%= link_to "Settings", edit_user_registration_path %></p>
+
       <h5>MORE USERS</h5>
       <% @users.each do |user| %>
         <div class="user-tiny-info">
           <p>
-            <a href="/users/<%= user.id %>"  >
-              <img src=<%= user.picture_url %> alt="" height="20" width="20">
-              <%= user.first_name %>
+            <a href="/users/<%= user.id %>" >
+              <% if Imageprofile.where(user_id: user.id )[0] != nil && Imageprofile.where(user_id: user.id )[0].profile_image != nil %>
+                <div class="small-profile-image-paperclip-home-page">
+                  <p><%= image_tag @imageprofile.where(user_id: user.id)[0].profile_image %> <a href="/users/<%= user.id %>"><%= user.first_name %> <%= user.last_name%></a></p>
+                </div>
+              <% else %>
+                <p><img src=<%= user.picture_url %> alt="" height="20" width="20"> <a href="/users/<%= user.id %>"><%= user.first_name %> <%= user.last_name%></a></p>
+              <% end %>
             </a>
           </p>
         </div>
@@ -23,16 +36,21 @@
       <div class="media">
         
         <% @books.each do |book| %>
-        
-        <% end %>
-
-        <% @books.each do |book| %>
           
           <div class="small-containers">
 
             <div class="media-left media-top">
               <a href="/users/<%= @users.find(book.user_id).id %>">
-              <img class="media-object" src=<%= @users.find(book.user_id).picture_url %> alt="..." height="50" width="45">
+
+
+              <% if Imageprofile.where(user_id: book.user_id )[0] != nil && Imageprofile.where(user_id: book.user_id )[0].profile_image != nil %>
+                <div class="medium-profile-image-paperclip-home-page">
+                  <p><%= image_tag Imageprofile.where(user_id: book.user_id)[0].profile_image %> </p>
+                </div>
+              <% else %>
+                <img class="media-object" src=<%= @users.find(book.user_id).picture_url %> alt="..." height="50" width="45"> 
+              <% end %>
+
               </a>
             </div>
             <div class="media-body small-containers">
