--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,12 +1,8 @@
 <div class="container">
-
+<% @current_user_imageprofile = Imageprofile.where(user_id: current_user.id )[0] %>
   <h2>Edit <%= resource_name.to_s.humanize %> Settings</h2>
 
   <div class="col-lg-12">
-    
-    
-
-
   
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
@@ -72,10 +68,9 @@
 
     <div class="col-lg-4 small-containers">
       <h3>Images Uploads:</h3>
+      <p>Click Camara to upload images:</p>
 
-      <p>Profile picture:</p>
-      <p>Wall picture:</p>
-      
+      <a href="/imageprofiles/new"><img src="/assets/uploadimages.png" alt="" height="70" width="80"></a>
 
       <h3>Cancel my account</h3>
       <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
