--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container-landing-page">
-<div class="container">
+<div class="container" id="landing-page-sign-up">
   <div class="col-lg-12 sing-up-page">
 
   <div class="col-lg-7 left-side-sign-up-page">
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-actions sing-up-button">
-          <%= f.button :submit, "Sign up" %>
+          <input type="submit" name="commit" value="Sign up" class="btn btn-lg btn-success">
         </div>
       <% end %>
     </div>
