edit profile images finished

--- a/app/views/imageprofiles/edit.html.erb
+++ b/app/views/imageprofiles/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Imageprofile</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @imageprofile %> |
-<%= link_to 'Back', imageprofiles_path %>
+<div class="container">
+  <h1 class="image-example-new-image">Edit your uploaded images!</h1>
+  
+  <%= render 'form' %>
+  <!-- <h2>Edit your profile images</h2> -->
+</div>
