modal display profile picture to right size

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -345,5 +345,9 @@ input[type="button"], input[type="reset"], input[type="submit"] {
   padding-top: 40px;
 }
 
-
+.picture-profile-modal img {
+  margin-left: -15px;
+  height: 535px; 
+  width: 490px;
+}
 
