--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,42 @@
 <div class="container-landing-page">
-<div class="container" id="landing-page-sign-up">
-  <div class="col-lg-12 sing-up-page">
+  <div class="container" id="landing-page-sign-up">
+    <div class="col-lg-12 sing-up-page">
 
-  <div class="col-lg-7 left-side-sign-up-page">
-    <h1>Welcome back to <span>savebook</span></h1>
-    <h5>You can log in for fee OR sing up for a new account.</h5>
-    <p>email: diegoh_c@yahoo.com</p>
-    <p>Password: password</p>
-    <div class="embed-responsive embed-responsive-16by9">
-      <video loop="loop" width="445" height="290" autoplay>
-        <source src="/assets/Library.mp4" type="video/mp4">
-        <source src="/assets/Library.ogg" type="video/ogg">
-        Your browser does not support the video tag.
-      </video>   
+      <div class="col-lg-7 left-side-sign-up-page">
+        <h1>Welcome back to <span>savebook</span></h1>
+        <h5>You can log in for <span style="color: green;">fee</span> OR sing up for a new account.</h5>
+        <p style="color: green;"><b>email: diegoh_c@yahoo.com</b></p>
+        <p style="color: green;"><b>Password: password</b></p>
+        <div class="embed-responsive embed-responsive-16by9">
+          <video loop="loop" width="445" height="290" autoplay>
+            <source src="/assets/Library.mp4" type="video/mp4">
+            <source src="/assets/Library.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>   
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <h1>Sign up</h1>
+        <h4>Its free and always will be!</h4>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+
+          <div class="form-inputs">
+            <%= f.input :first_name, required: true, autofocus: true %>
+            <%= f.input :last_name, required: true, autofocus: true %>
+            <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :address, required: false, autofocus: true %>
+            <p>Note: This info is require to locate books in your area.</p>
+            <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+            <%= f.input :password_confirmation, required: true %>
+          </div>
+
+          <div class="form-actions sing-up-button">
+            <input type="submit" name="commit" value="Sign up" class="btn btn-lg btn-success">
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
-
-    <div class="col-lg-4">
-      <h1>Sign up</h1>
-      <h4>Its free and always will be!</h4>
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= f.error_notification %>
-
-        <div class="form-inputs">
-          <%= f.input :first_name, required: true, autofocus: true %>
-          <%= f.input :last_name, required: true, autofocus: true %>
-          <%= f.input :email, required: true, autofocus: true %>
-          <%= f.input :address, required: false, autofocus: true %>
-          <p>Note: This info is require to locate books in your area.</p>
-          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-          <%= f.input :password_confirmation, required: true %>
-        </div>
-
-        <div class="form-actions sing-up-button">
-          <input type="submit" name="commit" value="Sign up" class="btn btn-lg btn-success">
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
 </div>
