fix small front end bug at sign_in page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -331,7 +331,7 @@ input[type="button"], input[type="reset"], input[type="submit"] {
 }
 
 #landing-page-sign-up {
-  height: 680px;
+  height: auto;
 }
 
 .sing-up-button input {
