created events branch

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,8 @@
              </div>
           <% else %>
             <img src=<%= current_user.picture_url %> alt="" height="20" width="20"> <%= current_user.first_name %></a></li>
-          <% end %>
+          <% end %> 
+          <li><a href="/books/"><span class=""></span> Home</a></li>
           <li><a href="/books/"><span class="glyphicon glyphicon-globe"></span> Books</a></li>
           <li><a href="/books/new"><span class="glyphicon glyphicon-book"></span> Post A Book</a></li>
           <li class="dropdown">
